<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/sort_by"
        android:title="@string/sort_by"
        android:icon="@drawable/ic_sort_black_24dp"
        app:showAsAction="ifRoom">

        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/menu_item__latest"
                    android:title="@string/latest"
                    android:icon="@drawable/ic_trending_up_black_24dp"/>
                <item
                    android:id="@+id/menu_item__popular"
                    android:title="@string/popular"
                    android:icon="@drawable/ic_whatshot_black_24dp"/>
                <item
                    android:id="@+id/menu_item__oldest"
                    android:title="@string/oldest"
                    android:icon="@drawable/ic_history_black_24dp"/>

            </group>
        </menu>

    </item>

</menu>