<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/download_pane"
        android:text="@string/download"
        android:drawableTop="@drawable/ic_file_download_black_24dp"
        android:drawablePadding="4dp"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:textColor="@color/tertiary_text"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@+id/share_pane"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp" />


    <TextView
        android:id="@+id/share_pane"
        android:text="@string/share"
        android:layout_gravity="center"
        android:drawableTop="@drawable/ic_share_black_24dp"
        android:drawablePadding="4dp"
        android:textSize="12sp"
        android:textColor="@color/tertiary_text"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@+id/wallpaper_pane"
        app:layout_constraintLeft_toRightOf="@+id/download_pane"
        app:layout_constraintTop_toTopOf="@+id/download_pane"
        />


    <TextView
        android:id="@+id/wallpaper_pane"
        android:text="@string/wallpaper"
        android:drawableTop="@drawable/ic_wallpaper_black_24dp"
        android:drawablePadding="4dp"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:textColor="@color/tertiary_text"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/share_pane"
        app:layout_constraintTop_toTopOf="@+id/share_pane"
        android:layout_marginStart="16dp" />

    <com.sackcentury.shinebuttonlib.ShineButton
        android:id="@+id/shine_like"
        android:layout_width="48dp"
        app:siShape="@raw/heart"
        app:btn_fill_color="@color/heart_color"
        app:allow_random_color="false"
        android:src="@color/tertiary_text"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/download_pane"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/shine_add" />

    <com.sackcentury.shinebuttonlib.ShineButton
        android:id="@+id/shine_add"
        android:layout_width="48dp"
        app:siShape="@raw/star"
        app:btn_fill_color="@color/star_color"
        app:allow_random_color="false"
        android:src="@color/tertiary_text"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/download_pane"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/shine_like" />

</android.support.constraint.ConstraintLayout>