<?xml version="1.0" encoding="utf-8"?>

<com.flipboard.bottomsheet.BottomSheetLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detail_bottom_sheet"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <de.aaronoe.picsplash.components.SwipeBackLayout
        android:id="@+id/swipe_back_layout"
        android:theme="@style/Theme.Swipe.Back"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <de.aaronoe.picsplash.components.SwipeScrollView
            android:id="@+id/container_scrollview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <android.support.design.widget.CoordinatorLayout
                android:id="@+id/activity_photo_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.AppBarLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/detailpage.appbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    >

                    <ImageView
                        android:id="@+id/image_item_iv"
                        android:transitionName="@string/transition_shared_key"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        tools:src="@drawable/test_photo"
                        app:layout_collapseMode="parallax"
                        />


                    <android.support.v7.widget.Toolbar
                        android:id="@+id/detailpage_toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="?attr/actionBarSize"
                        android:background="?colorPrimary"
                        app:theme="@style/ThemeOverlay.AppCompat.Light"
                        app:layout_scrollFlags="scroll|enterAlways"
                        />

                    <LinearLayout
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/author_name_tv"
                            tools:text="By Aaron Oertel"
                            android:layout_margin="8dp"
                            android:textSize="18sp"
                            android:textColor="@color/primary_text"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/detail_publish"
                            tools:text="On 2017-05-30"
                            android:layout_margin="4dp"
                            android:textSize="12sp"
                            android:textColor="@color/secondary_text"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/detail_author_image"
                            tools:src="@drawable/test_photo"
                            android:layout_margin="8dp"
                            android:layout_gravity="center"
                            android:layout_width="64dp"
                            android:layout_height="64dp" />

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="16dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:baselineAligned="false">

                            <LinearLayout
                                android:id="@+id/download_pane"
                                android:orientation="vertical"
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content">

                                <ImageView
                                    android:src="@drawable/ic_file_download_black_24dp"
                                    android:layout_gravity="center"
                                    android:layout_width="24dp"
                                    android:layout_height="24dp" />

                                <TextView
                                    android:text="@string/download"
                                    android:layout_marginTop="4dp"
                                    android:layout_gravity="center"
                                    android:textSize="12sp"
                                    android:textColor="@color/tertiary_text"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content" />

                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/share_pane"
                                android:orientation="vertical"
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content">

                                <ImageView
                                    android:src="@drawable/ic_share_black_24dp"
                                    android:layout_gravity="center"
                                    android:layout_width="24dp"
                                    android:layout_height="24dp" />

                                <TextView
                                    android:text="@string/share"
                                    android:layout_marginTop="4dp"
                                    android:layout_gravity="center"
                                    android:textSize="12sp"
                                    android:textColor="@color/tertiary_text"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content" />

                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/wallpaper_pane"
                                android:orientation="vertical"
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content">

                                <ImageView
                                    android:src="@drawable/ic_wallpaper_black_24dp"
                                    android:layout_gravity="center"
                                    android:layout_width="24dp"
                                    android:layout_height="24dp" />

                                <TextView
                                    android:text="@string/wallpaper"
                                    android:layout_marginTop="4dp"
                                    android:layout_gravity="center"
                                    android:textSize="12sp"
                                    android:textColor="@color/tertiary_text"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content" />

                            </LinearLayout>

                        </LinearLayout>

                        <ProgressBar
                            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                            android:id="@+id/detail_progress_download"
                            android:indeterminateOnly="true"
                            android:layout_gravity="bottom"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="invisible"/>


                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@android:color/darker_gray"/>

                        <include layout="@layout/photo_meta_pane"/>

                    </LinearLayout>

                </android.support.design.widget.AppBarLayout>

            </android.support.design.widget.CoordinatorLayout>

        </de.aaronoe.picsplash.components.SwipeScrollView>

    </de.aaronoe.picsplash.components.SwipeBackLayout>

</com.flipboard.bottomsheet.BottomSheetLayout>